c2prj1_cards/grade.txt
Grading at Tue Jan 29 18:23:17 UTC 2019
Compiling cards.c
cards.c: In function ‘print_card’:
cards.c:60:30: error: incompatible type for argument 1 of ‘value_letter’
   printf("%c%c",value_letter(c.value) ,suit_letter(c.suit))
                              ^
cards.c:27:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘unsigned int’
 char value_letter(card_t c) {
      ^
cards.c:60:52: error: incompatible type for argument 1 of ‘suit_letter’
   printf("%c%c",value_letter(c.value) ,suit_letter(c.suit))
                                                    ^
cards.c:48:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘suit_t {aka enum <anonymous>}’
 char suit_letter(card_t c) {
      ^
cards.c:61:3: error: expected ‘;’ before ‘}’ token
   }
   ^
cards.c: In function ‘card_from_letters’:
cards.c:74:8: error: multi-character character constant [-Werror=multichar]
   case '10': temp.value = 0; break;
        ^
cards.c:74:3: error: case label value exceeds maximum value for type [-Werror]
   case '10': temp.value = 0; break;
   ^
In file included from cards.c:2:0:
cards.c:86:10: error: void value not ignored as it ought to be
   assert(assert_card_valid(temp));
          ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
